# advent

./: .clang-format  .gitignore  CMakeLists.txt
scripts/: runDebug.bat
src/: main.cpp
src/days/common/: common.h
src/days/day01/: day01.cpp  day01.h
src/days/day02/: day02.cpp  day02.h
src/days/day03/: day03.cpp  day03.h
src/days/day04/: day04.cpp  day04.h
src/days/day05/: day05.cpp  day05.h
src/days/day06/: day06.cpp  day06.h
src/days/day07/: day07.cpp  day07.h
